--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
@@ -1,72 +1,22 @@
 ﻿<div class="test-create-steps test-sections">
-    <create-test-header [testSettings]="testSettings"></create-test-header>
+    <create-test-header [testDetails]="testDetails"></create-test-header>
+    <div class="loader-container" *ngIf="loader">
+        <div class="spinner"></div>
+    </div>
     <div class="container">
         <h5>Select sections to add in your test</h5>
         <ul class="sections-list">
-            <li>
-                <label for="section1">
-                    <input type="checkbox" id="section1" />
+            <li *ngFor="let categories of testDetails.categoryAcList"
+                (click)="onSelect(categories)">
+                <label for="{{categories.categoryName}}">
+                    <input type="checkbox" id="" [(ngModel)]="categories.isSelect" />
                     <span class="section-box clearfix">
-                        <span class="h4 pull-left">English Communication</span>
-                        <em class="material-icons pull-right">check</em>
-                    </span>
-                </label>
-            </li>
-            <li>
-                <label for="section2">
-                    <input type="checkbox" id="section2" />
-                    <span class="section-box clearfix">
-                        <span class="h4 pull-left">Logical Reasoning & Data Interpretation</span>
-                        <em class="material-icons pull-right">check</em>
-                    </span>
-                </label>
-            </li>
-            <li>
-                <label for="section3">
-                    <input type="checkbox" id="section3" />
-                    <span class="section-box clearfix">
-                        <span class="h4 pull-left">Quantitative Ability</span>
-                        <em class="material-icons pull-right">check</em>
-                    </span>
-                </label>
-            </li>
-            <li>
-                <label for="section4">
-                    <input type="checkbox" id="section4" />
-                    <span class="section-box clearfix">
-                        <span class="h4 pull-left">Programming</span>
-                        <em class="material-icons pull-right">check</em>
-                    </span>
-                </label>
-            </li>
-            <li>
-                <label for="section5">
-                    <input type="checkbox" id="section5" />
-                    <span class="section-box clearfix">
-                        <span class="h4 pull-left">English Writing</span>
-                        <em class="material-icons pull-right">check</em>
-                    </span>
-                </label>
-            </li>
-            <li>
-                <label for="section6">
-                    <input type="checkbox" id="section6" />
-                    <span class="section-box clearfix">
-                        <span class="h4 pull-left">General Awareness</span>
-                        <em class="material-icons pull-right">check</em>
-                    </span>
-                </label>
-            </li>
-            <li>
-                <label for="section7">
-                    <input type="checkbox" id="section7" />
-                    <span class="section-box clearfix">
-                        <span class="h4 pull-left">Physics</span>
+                        <span class="h4 pull-left">{{categories.categoryName}}</span>
                         <em class="material-icons pull-right">check</em>
                     </span>
                 </label>
             </li>
         </ul>
     </div>
-    <create-test-footer></create-test-footer>
+    <create-test-footer (SaveCategory)="saveCategoryToExitOrMoveNext($event)"></create-test-footer>
 </div>
