--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -1,26 +1,26 @@
 ﻿<div class="test-create-steps test-settings">
   <form #settingsForm="ngForm">
-    <create-test-header [testSettings]="testSettings"></create-test-header>
+    <create-test-header [testDetails]="testDetails"></create-test-header>
     <div class="container">
       <h5>Settings & Schedule</h5>
       <div class="form-area">
         <div class="form-group">
           <label>Time Duration (mins)</label>
-          <input type="text" class="form-control small-width" [(ngModel)]="testSettings.duration" name="Duration" placeholder="00" max="180" min="0" #Duration="ngModel" pattern="^\d{0,4}?$" (keyup)="isWarningTimeValid()" />
+          <input type="text" class="form-control small-width" [(ngModel)]="testDetails.duration" name="Duration" placeholder="00" max="180" min="0" #Duration="ngModel" pattern="^\d{0,4}?$" (keyup)="isWarningTimeValid()" />
           <div class="errors-container">
             <span class="error-msg" *ngIf="Duration.errors && Duration.dirty && !Duration.valid && Duration.errors.pattern">Invalid Time</span>
           </div>
         </div>
         <div class="form-group inline-field">
           <label>Start Date & Time</label>
-          <input type="datetime-local" class="form-control small-width" [(ngModel)]="testSettings.startDate" name="Start Date" (mouseup)="isStartDateValid()" />
+          <input type="datetime-local" class="form-control small-width" [(ngModel)]="testDetails.startDate" name="Start Date" (mouseup)="isStartDateValid()" />
           <div class="errors-container">
             <span class="error-msg small-width" *ngIf="validStartDate">Start Date must be lesser than End Date and Time and greater than current Date and Time</span>
           </div>
         </div>
         <div class="form-group inline-field">
           <label>End Date & Time</label>
-          <input type="datetime-local" class="form-control small-width" [(ngModel)]="testSettings.endDate" name="End Date" (mouseup)="isEndDateValid(testSettings.endDate)" />
+          <input type="datetime-local" class="form-control small-width" [(ngModel)]="testDetails.endDate" name="End Date" (mouseup)="isEndDateValid(testDetails.endDate)" />
           <div class="errors-container">
             <span class="error-msg" *ngIf="validEndDate">End Date and Time must be greater then Start Date and Time</span>
           </div>
@@ -29,14 +29,14 @@
           <label>IP Restrictions</label>
           <br />
           <div>
-            <input type="text" class="form-control small-width" id="From" name="From" placeholder="From IP" #From=ngModel [(ngModel)]="testSettings.fromIpAddress" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+            <input type="text" class="form-control small-width" id="From" name="From" placeholder="From IP" #From=ngModel [(ngModel)]="testDetails.fromIpAddress" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
             <br />
             <div class="errors-container">
               <span class="error-msg" *ngIf="From.errors && From.dirty" [hidden]="!From.errors.pattern">Enter IP Address in correct format</span>
             </div>
           </div>
           <div>
-            <input type="text" class="form-control small-width" id="To" name="To" placeholder="To IP" [(ngModel)]="testSettings.toIpAddress" #To=ngModel pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+            <input type="text" class="form-control small-width" id="To" name="To" placeholder="To IP" [(ngModel)]="testDetails.toIpAddress" #To=ngModel pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
             <br />
             <div class="errors-container">
               <span class="error-msg" *ngIf="To.errors && To.dirty" [hidden]="!To.errors.pattern">Enter IP Address in valid format</span>
@@ -45,7 +45,7 @@
         </div>
         <div class="form-group">
           <label>Browser Tolerance</label>
-          <select class="form-control half-width" [(ngModel)]="testSettings.browserTolerance" name="Browser Tolerance">
+          <select class="form-control half-width" [(ngModel)]="testDetails.browserTolerance" name="Browser Tolerance">
             <option>0</option>
             <option>1</option>
             <option>2</option>
@@ -55,7 +55,7 @@
         </div>
         <div class="form-group">
           <label>Question Order</label>
-          <select class="form-control half-width" [(ngModel)]="testSettings.questionOrder" name="questionOrder">
+          <select class="form-control half-width" [(ngModel)]="testDetails.questionOrder" name="questionOrder">
             <option value="0">Fixed</option>
             <option value="1">Random</option>
           </select>
@@ -63,7 +63,7 @@
         </div>
         <div class="form-group">
           <label>Option Order</label>
-          <select class="form-control half-width" [(ngModel)]="testSettings.optionOrder" name="optionOrder">
+          <select class="form-control half-width" [(ngModel)]="testDetails.optionOrder" name="optionOrder">
             <option value="0">Fixed</option>
             <option value="1">Random</option>
           </select>
@@ -71,33 +71,33 @@
         </div>
         <div class="form-group inline-field">
           <label>Correct Marks</label>
-          <input type="text" class="form-control small-width" [(ngModel)]="testSettings.correctMarks" name="CorrectMarks" #CorrectMarks="ngModel" pattern="^\d{0,4}(\.\d{1,2})?$" min="0" />
+          <input type="text" class="form-control small-width" [(ngModel)]="testDetails.correctMarks" name="CorrectMarks" #CorrectMarks="ngModel" pattern="^\d{0,4}(\.\d{1,2})?$" min="0" />
           <div class="errors-container">
             <span class="error-msg" *ngIf="CorrectMarks.errors && CorrectMarks.dirty && !CorrectMarks.valid && CorrectMarks.errors.pattern">Enter valid correct marks</span>
           </div>
         </div>
         <div class="form-group inline-field">
           <label>Incorrect Marks</label>
-          <input type="text" class="form-control small-width" [(ngModel)]="testSettings.incorrectMarks" name="IncorrectMarks" #IncorrectMarks="ngModel" pattern="^\d{0,4}(\.\d{1,2})?$" min="0" />
+          <input type="text" class="form-control small-width" [(ngModel)]="testDetails.incorrectMarks" name="IncorrectMarks" #IncorrectMarks="ngModel" pattern="^\d{0,4}(\.\d{1,2})?$" min="0" />
           <div class="errors-container">
             <span class="error-msg" *ngIf="IncorrectMarks.errors && IncorrectMarks.dirty && !IncorrectMarks.valid && IncorrectMarks.errors.pattern">Enter valid incorrect marks</span>
           </div>
         </div>
         <div class="form-group">
           <label>Warning Message</label>
-          <textarea class="form-control half-width" rows="3" #textarea placeholder="Your message here" [(ngModel)]="testSettings.warningMessage" name="Warning Message" maxlength="255"></textarea>
+          <textarea class="form-control half-width" rows="3" #textarea placeholder="Your message here" [(ngModel)]="testDetails.warningMessage" name="Warning Message" maxlength="255"></textarea>
           <div class="errors-container"></div>
         </div>
         <div class="form-group">
           <label>Warning Time (mins)</label>
-          <input type="text" pattern="[0-9]*" class="form-control small-width" placeholder="00" [(ngModel)]="testSettings.warningTime" name="WarningTime" min="0" #WarningTime="ngModel" (keyup)="isWarningTimeValid()" />
+          <input type="text" pattern="[0-9]*" class="form-control small-width" placeholder="00" [(ngModel)]="testDetails.warningTime" name="WarningTime" min="0" #WarningTime="ngModel" (keyup)="isWarningTimeValid()" />
           <div class="errors-container">
             <span class="error-msg" *ngIf="WarningTime.errors && WarningTime.dirty && !WarningTime.valid && WarningTime.errors.pattern">Invalid Time</span>
             <span class="error-msg" *ngIf="validTime">Warning Time should be less than Time Duration</span>
           </div>
         </div>
-        <create-test-footer (saveTestSettings)="saveTestSettings(testSettings.id,testSettings)" (launchTestDialog)="launchTestDialog(testSettings.id,testSettings)" [settingsForm]="settingsForm" [validStartDate]="validStartDate" [validEndDate]="validEndDate" [validTime]="validTime"></create-test-footer>
+        <create-test-footer (saveTestSettings)="saveTestSettings(testDetails.id,testDetails)" (launchTestDialog)="launchTestDialog(testDetails.id,testDetails)" [settingsForm]="settingsForm" [validStartDate]="validStartDate" [validEndDate]="validEndDate" [validTime]="validTime"></create-test-footer>
       </div>
-    </div>
+    </div> 
   </form>
 </div>
