Solved Bug #21821, required error message issue of test name and changed the format of test link.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
@@ -2,7 +2,7 @@
     <div class="loader-container" *ngIf="loader">
         <div class="spinner"></div>
     </div>
-  <create-test-header [testDetails]="testDetails"></create-test-header>
+  <create-test-header [testDetails]="testDetails" [testNameReference]="testNameReference"></create-test-header>
   <div class="container">
     <h5 style="display: none;">In order to add questions, please select sections from <a href="" class="theme-text">here</a></h5>
     <h2>Select questions for each section</h2>
