--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
@@ -1,5 +1,5 @@
 ﻿<div class="test-create-steps test-sections">
-    <create-test-header [testDetails]="testDetails"></create-test-header>
+    <create-test-header [testDetails]="testDetails" [testNameReference]="testNameReference"></create-test-header>
     <div class="loader-container" *ngIf="loader">
         <div class="spinner"></div>
     </div>
