--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -1,6 +1,6 @@
 ﻿<div class="test-create-steps test-settings">
   <form #settingsForm="ngForm">
-    <create-test-header [testDetails]="testDetails"></create-test-header>
+    <create-test-header [testDetails]="testDetails" [testNameReference]="testNameReference"></create-test-header>
     <div class="container">
       <h5>Settings & Schedule</h5>
       <div class="form-area">
