--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-header/create-test-header.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-header/create-test-header.html
@@ -11,7 +11,7 @@
         <button type="button" class="icon-btn ml10" (click)="showEditButton(box.value)" *ngIf="!isEditButtonVisible"><em class="material-icons danger-text">close</em></button>
       </span>
       <span class="errors-container">
-        <span class="error-msg" *ngIf="isWhiteSpaceError || name.errors && !name.valid && name.errors.required">Name is required</span>
+        <span class="error-msg" *ngIf="isWhiteSpaceError || name.errors && name.dirty && !name.valid && name.errors.required">Name is required</span>
         <span class="error-msg" *ngIf="name.errors && (name. touched || name.untouched)  && !name.valid && name.errors.pattern && name.dirty">Enter a valid Test Name</span>
         <span class="error-msg" *ngIf="isTestNameExist">Test with this name already exists</span>
       </span>
