--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/instructions/instructions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/instructions/instructions.html
@@ -13,8 +13,8 @@
                 <th class="h5">Not Attempted</th>
             </tr>
             <tr>
-                <td class="h2">{{testInstructions.correctMarks}}</td>
-                <td class="h2">{{testInstructions.incorrectMarks}}</td>
+                <td class="h2">+{{testInstructions.correctMarks}}</td>
+                <td class="h2">-{{testInstructions.incorrectMarks}}</td>
                 <td class="h2">0</td>
             </tr>
         </table>
@@ -25,7 +25,7 @@
         </ul>
         <div class="text-center">
             <h2 class="mb20">All the Best!</h2>
-            <button type="button" class="btn btn-primary">Start Test</button>
+            <button type="button" class="btn btn-primary" (click)="startTest()">Start Test</button>
         </div>
     </div>
     <test-conduct-footer></test-conduct-footer>
