--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/test-create-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/test-create-dialog.html
@@ -6,7 +6,7 @@
     <md-dialog-content>
         <div class="form-group">
             <label>Test Name</label>
-            <input type="text" id="name" name="name" class="form-control" (ngModelChange)="ChangeError()" placeholder="Ex. Software Developer Recruitment Test" [(ngModel)]="testNameReference" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&*^{}+;:<>()-]*$" maxlength="150" />
+            <input type="text" id="name" name="name" class="form-control" (ngModelChange)="ChangeError()" placeholder="Ex. Software Developer Recruitment Test" [(ngModel)]="testNameReference" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&*^{}+;:<>()-]*$" maxlength="150" (keyup.enter)="AddTest(testNameReference)"/>
             <div class="errors-container">
                 <span class="error-msg" *ngIf="isWhiteSpaceError || (name.touched && !name.valid && name.errors.required)">Name is required</span>
                 <span class="error-msg" *ngIf="name.touched && !name.valid && name.errors.pattern">Enter a valid Test Name</span>
@@ -15,7 +15,7 @@
         </div>
     </md-dialog-content>
     <md-dialog-actions>
-        <button type="button" class="btn" md-dialog-close>Cancel</button>
-        <button type="submit" class="btn btn-primary" (click)="AddTest(testNameReference)">Create Test</button>
+        <button type="button" class="btn" md-dialog-close tabindex="1">Cancel</button>
+        <button type="submit" class="btn btn-primary" tabindex="0" (click)="AddTest(testNameReference)">Create Test</button>
     </md-dialog-actions>
 </div>
