Solved bug in validating default option for category drop down while adding code snippet question

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -13,7 +13,7 @@
                 <div class="form-group">
                     <label>Section</label>
                     <select class="form-control width-percent-60" id="categorySelect" (change)="selectCategory($event.target.value)" [(ngModel)]="selectedCategory" required name="categorySelect" #categorySelect="ngModel">
-                        <option [disabled]="categorySelect.dirty || isQuestionEdited || isQuestionDuplicated" default>Please select a Category</option>
+                        <option [disabled]="categorySelect.dirty || isQuestionEdited || isQuestionDuplicated" default value="">Please select a Category</option>
                         <option *ngFor="let category of categoryList">{{category.categoryName}}</option>
                     </select>
                     <div class="errors-container">
