--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
@@ -37,7 +37,7 @@
                                 <p class="light-text">{{test.numberOfTestAttendees}} Candidates</p>
                             </div>
                             <div class="text-center">
-                                <button type="button" class="btn btn-primary" [routerLink]="['/reports']">View Report</button>
+                                <button type="button" class="btn btn-primary" [routerLink]="['/reports',test.id]">View Report</button>
                             </div>
                         </div>
                     </div>
