--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -1,4 +1,7 @@
-﻿<div class="container">
+﻿<div class="loader-container" *ngIf="loader">
+    <div class="spinner"></div>
+</div>
+<div class="container">
     <div class="questions-dashboard">
         <div class="title-area mb20 clearfix">
             <h1 class="pull-left">Questions</h1>
