Loader added to test-dashboard message added in test-questions.component

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
@@ -1,4 +1,7 @@
 ﻿<div class="container">
+    <div class="loader-container" *ngIf="loader">
+        <div class="spinner"></div>
+    </div>
     <div class="tests-dashboard">
         <div class="title-area mb20 clearfix">
             <h1 class="pull-left">Tests</h1>
