--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
@@ -4,11 +4,11 @@
     </div>
   <create-test-header [testDetails]="testDetails" [testNameReference]="testNameReference"></create-test-header>
   <div class="container">
-    <h5 style="display: none;">In order to add questions, please select sections from <a href="" class="theme-text">here</a></h5>
-    <h2>Select questions for each section</h2>
-    <md2-accordion class="questions-selection" >
-      <md2-accordion-tab class="collapsible-block"  *ngFor="let category of testDetails.categoryAcList; let k=index">
-        <md2-accordion-header class="collapsible-header clearfix"  *ngIf="category.isSelect" [class.active]="category.isAccordionOpen" (click)="getAllquestions(category,k)">
+    <h3 *ngIf="!isCategoryNull">In order to add questions, please select sections from <a href="#" [routerLink]="['/tests', testId,'sections']" class="theme-text">here</a></h3>
+    <h2 *ngIf="isCategoryNull">Select questions for each section</h2>
+    <md2-accordion class="questions-selection"  *ngFor="let category of testDetails.categoryAcList; let k=index">
+      <md2-accordion-tab class="collapsible-block" *ngIf="category.isSelect">
+        <md2-accordion-header class="collapsible-header clearfix"  [class.active]="category.isAccordionOpen" (click)="getAllquestions(category,k)">
           <div class="title-info h2 pull-left">
             <span>{{category.categoryName}}</span>
           </div>
@@ -44,5 +44,4 @@
     </md2-accordion>
   </div>
     <create-test-footer  (saveExit)="saveExit()" (saveNext)="saveNext()"></create-test-footer>
- 
 </div>
