--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -1,5 +1,8 @@
 ﻿<div class="test-create-steps test-settings">
   <form #settingsForm="ngForm">
+    <div class="loader-container" *ngIf="loader">
+      <div class="spinner"></div>
+    </div>
     <create-test-header [testDetails]="testDetails" [testNameReference]="testNameReference"></create-test-header>
       <div class="loader-container" *ngIf="loader">
           <div class="spinner"></div>
@@ -9,8 +12,9 @@
       <div class="form-area">
         <div class="form-group">
           <label>Time Duration (mins)</label>
-          <input type="text" class="form-control small-width" [(ngModel)]="testDetails.duration" name="Duration" placeholder="00" max="180" min="0" #Duration="ngModel" pattern="^\d{0,4}?$" (keyup)="isWarningTimeValid()" />
+          <input type="text" class="form-control small-width" [(ngModel)]="testDetails.duration" name="Duration" placeholder="00" max="180" min="0" #Duration="ngModel" required pattern="^\d{0,4}?$" (keyup)="isWarningTimeValid()" />
           <div class="errors-container">
+            <span class="error-msg" *ngIf="Duration.errors && Duration.dirty && !Duration.valid && Duration.errors.required">Test Duration is required</span>
             <span class="error-msg" *ngIf="Duration.errors && Duration.dirty && !Duration.valid && Duration.errors.pattern">Invalid Time</span>
           </div>
         </div>
@@ -49,10 +53,10 @@
         <div class="form-group">
           <label>Browser Tolerance</label>
           <select class="form-control half-width" [(ngModel)]="testDetails.browserTolerance" name="Browser Tolerance">
-            <option>0</option>
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
+            <option value="0">Not Applicable</option>
+            <option value="3">Low</option>
+            <option value="7">Medium</option>
+            <option value="12">High</option>
           </select>
           <div class="errors-container"></div>
         </div>
@@ -74,15 +78,17 @@
         </div>
         <div class="form-group inline-field">
           <label>Correct Marks</label>
-          <input type="text" class="form-control small-width" [(ngModel)]="testDetails.correctMarks" name="CorrectMarks" #CorrectMarks="ngModel" pattern="^\d{0,4}(\.\d{1,2})?$" min="0" />
+          <input type="text" class="form-control small-width" [(ngModel)]="testDetails.correctMarks" name="CorrectMarks" #CorrectMarks="ngModel" required pattern="^\d{0,4}(\.\d{1,2})?$" min="0" />
           <div class="errors-container">
+            <span class="error-msg" *ngIf="CorrectMarks.errors && CorrectMarks.dirty && !CorrectMarks.valid && CorrectMarks.errors.required">Correct Marks is required</span>
             <span class="error-msg" *ngIf="CorrectMarks.errors && CorrectMarks.dirty && !CorrectMarks.valid && CorrectMarks.errors.pattern">Enter valid correct marks</span>
           </div>
         </div>
         <div class="form-group inline-field">
           <label>Incorrect Marks</label>
-          <input type="text" class="form-control small-width" [(ngModel)]="testDetails.incorrectMarks" name="IncorrectMarks" #IncorrectMarks="ngModel" pattern="^\d{0,4}(\.\d{1,2})?$" min="0" />
+          <input type="text" class="form-control small-width" [(ngModel)]="testDetails.incorrectMarks" name="IncorrectMarks" #IncorrectMarks="ngModel" required pattern="^\d{0,4}(\.\d{1,2})?$" min="0" />
           <div class="errors-container">
+            <span class="error-msg" *ngIf="IncorrectMarks.errors && IncorrectMarks.dirty && !IncorrectMarks.valid && IncorrectMarks.errors.required">Incorrect Marks is required</span>
             <span class="error-msg" *ngIf="IncorrectMarks.errors && IncorrectMarks.dirty && !IncorrectMarks.valid && IncorrectMarks.errors.pattern">Enter valid incorrect marks</span>
           </div>
         </div>
