--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/update-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/update-category-dialog.html
@@ -15,6 +15,6 @@
     </md-dialog-content>
     <md-dialog-actions>
         <button type="button" class="btn" md-dialog-close>Cancel</button>
-        <button type="submit" class="btn btn-primary" (click)="updateCategory(category)">Update</button>
+        <button type="submit" class="btn btn-primary" [disabled]="CategoryName.errors" (click)="updateCategory(category)">Update</button>
     </md-dialog-actions>
 </div>
