Implemented client side for test conduct

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
@@ -6,14 +6,14 @@
                     <img class="promact-logo" src="/images/promact-logo.png" alt="Promact Logo" width="180" />
                 </div>
                 <div class="display-table-cell text-center">
-                    <h2 class="mb5">BBIT 10-08-2017</h2>
+                    <h2 class="mb5">{{test.testName}}</h2>
                     <p class="mb0">John Doe</p>
                 </div>
                 <div class="display-table-cell text-right">
                     <button type="button" class="btn btn-primary">End Test</button>
                     <br class="hidden-lg" />
                     <h5 class="mlr10">Time Remaining:</h5>
-                    <h2 class="mt3">02:15:20</h2>
+                    <h2 class="mt3">{{timeString}}</h2>
                 </div>
             </div>
         </div>
